--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"prisma-dev": "dotenv -e .env.local prisma migrate dev ",
-		"prisma-seed": "dotenv -e .env.local prisma db seed "
+		"local-prisma": "dotenv -e .env.local prisma $CMD"
 	},
 	"prisma": {
 		"seed": "ts-node -P tsconfig-seed.json -r tsconfig-paths/register --transpileOnly prisma/seed.ts"
