--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"next": "13.1.6",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-feather": "2.0.10",
+		"react-icons": "^4.7.1",
 		"typescript": "4.9.5"
 	},
 	"devDependencies": {
