--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"eslint": "8.34.0",
 		"eslint-config-next": "13.1.6",
 		"jose": "4.11.1",
+		"cookie": "0.5.0",
 		"next": "13.1.6",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
